--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>contact</title>
+    <title>Contact us for buying choclate croissant</title>
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
     <h1>🥐 Contact us</h1>
     <p>Email us at <a href="#">hello@croissant.com</a> for more info</p>
-    <a class="links" href="/">Hompage</a>
-    <a class="links" href="/photo.html">Photo</a>
-    <a class="links" href="/contact.html">Contact</a>
+    <a
+      class="links"
+      title="https://main--loquacious-twilight-bb873b.netlify.app/"
+      href="/"
+      >Hompage</a
+    >
+    <a
+      class="links"
+      title="https://main--loquacious-twilight-bb873b.netlify.app/photo.html"
+      href="/photo.html"
+      >Photo</a
+    >
+    <a
+      class="links"
+      title="https://main--loquacious-twilight-bb873b.netlify.app/contact.html"
+      href="/contact.html"
+      >Contact</a
+    >
   </body>
 </html>
