--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>homepage</title>
-    <link rel="stylesheet" href="/src/style.css">
+    <meta
+      name="description"
+      content="Our chocolate croissant recipe was crafted by a team of genius patisserie chefs in France with little more than French flour, fine unsalted butter and the world's finest cocoa."
+    />
+    <title>The most delisious chocolate croissant in Paris|chocolate.com</title>
+    <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
     <h1>🥐Croissant</h1>
@@ -14,8 +18,23 @@
       the shape of the Austrian kipferl but using the French yeast-leavened
       laminated dough.
     </p>
-     <a class="links" href="/">Hompage</a>
-    <a class="links" href="/photo.html">Photo</a>
-    <a class="links" href="/contact.html">Contact</a>
+    <a
+      class="links"
+      title="https://main--loquacious-twilight-bb873b.netlify.app/"
+      href="/"
+      >Hompage</a
+    >
+    <a
+      class="links"
+      title="https://main--loquacious-twilight-bb873b.netlify.app/photo.html"
+      href="/photo.html"
+      >Photo</a
+    >
+    <a
+      class="links"
+      title="https://main--loquacious-twilight-bb873b.netlify.app/contact.html"
+      href="/contact.html"
+      >Contact</a
+    >
   </body>
 </html>
