--- a/photo.html
+++ b/photo.html
@@ -4,15 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>photo</title>
-        <link rel="stylesheet" href="/src/style.css">
-
+    <title>Our delisious chocolate croissant image|chocolate.com</title>
+    <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
-    <h1>🥐A picture of croissant</h1>
-    <img src="/images/Croissant-cu.jpg" alt="" />
-    <a class="links" href="/">Hompage</a>
-    <a class="links" href="/photo.html">Photo</a>
-    <a class="links" href="/contact.html">Contact</a>
+    <h1>🥐A picture of a chocolate croissant</h1>
+    <img src="/images/Croissant-cu.jpg" alt="a chocolate croissant" />
+    <a
+      class="links"
+      title="https://main--loquacious-twilight-bb873b.netlify.app/"
+      href="/"
+      >Hompage</a
+    >
+    <a
+      class="links"
+      title="https://main--loquacious-twilight-bb873b.netlify.app/photo.html"
+      href="/photo.html"
+      >Photo</a
+    >
+    <a
+      class="links"
+      title="https://main--loquacious-twilight-bb873b.netlify.app/contact.html"
+      href="/contact.html"
+      >Contact</a
+    >
   </body>
 </html>
