Added some SEO features

--- a/index.html
+++ b/index.html
@@ -18,23 +18,8 @@
       the shape of the Austrian kipferl but using the French yeast-leavened
       laminated dough.
     </p>
-    <a
-      class="links"
-      title="https://main--loquacious-twilight-bb873b.netlify.app/"
-      href="/"
-      >Hompage</a
-    >
-    <a
-      class="links"
-      title="https://main--loquacious-twilight-bb873b.netlify.app/photo.html"
-      href="/photo.html"
-      >Photo</a
-    >
-    <a
-      class="links"
-      title="https://main--loquacious-twilight-bb873b.netlify.app/contact.html"
-      href="/contact.html"
-      >Contact</a
-    >
+    <a class="links" title="Hompage" href="/">Hompage</a>
+    <a class="links" title="Croissant photo" href="/photo.html">Photo</a>
+    <a class="links" title="Contact us" href="/contact.html">Contact</a>
   </body>
 </html>
