--- a/photo.html
+++ b/photo.html
@@ -5,28 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Our delisious chocolate croissant image|chocolate.com</title>
+    <meta
+      name="description"
+      content="Enjoy a beautiful picture of a chocolate croissant "
+    />
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
     <h1>🥐A picture of a chocolate croissant</h1>
     <img src="/images/Croissant-cu.jpg" alt="a chocolate croissant" />
-    <a
-      class="links"
-      title="https://main--loquacious-twilight-bb873b.netlify.app/"
-      href="/"
-      >Hompage</a
-    >
-    <a
-      class="links"
-      title="https://main--loquacious-twilight-bb873b.netlify.app/photo.html"
-      href="/photo.html"
-      >Photo</a
-    >
-    <a
-      class="links"
-      title="https://main--loquacious-twilight-bb873b.netlify.app/contact.html"
-      href="/contact.html"
-      >Contact</a
-    >
+    <a class="links" title="Hompage" href="/">Hompage</a>
+    <a class="links" title="Croissant photo" href="/photo.html">Photo</a>
+    <a class="links" title="Contact us" href="/contact.html">Contact</a>
   </body>
 </html>
