--- a/contact.html
+++ b/contact.html
@@ -5,28 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact us for buying choclate croissant</title>
+    <meta
+      name="description"
+      content="for more info about choclate croissant contact us "
+    />
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
     <h1>🥐 Contact us</h1>
     <p>Email us at <a href="#">hello@croissant.com</a> for more info</p>
-    <a
-      class="links"
-      title="https://main--loquacious-twilight-bb873b.netlify.app/"
-      href="/"
-      >Hompage</a
-    >
-    <a
-      class="links"
-      title="https://main--loquacious-twilight-bb873b.netlify.app/photo.html"
-      href="/photo.html"
-      >Photo</a
-    >
-    <a
-      class="links"
-      title="https://main--loquacious-twilight-bb873b.netlify.app/contact.html"
-      href="/contact.html"
-      >Contact</a
-    >
+    <a class="links" title="Hompage" href="/">Hompage</a>
+    <a class="links" title="Croissant photo" href="/photo.html">Photo</a>
+    <a class="links" title="Contact us" href="/contact.html">Contact</a>
   </body>
 </html>
